spacing issues and reorganized style.css

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,15 @@
   width: 100%;
 }
 
+#footer {
+	margin-top: 1em;
+  background-color: lightgrey;
+  padding:1px;
+	height: 80px;
+	clear: both;
+  text-align: center;
+}
+
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-size: 3em;
@@ -107,12 +116,6 @@ p {
   font-size: 1em;
 }
 
-.section {
-  box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1); 
-	border-radius: 12px 12px 12px 12px;
-  padding:2px 40px;
-}
-
 .headingbubble {
   border-style: none none solid none;
   padding: 2px;
@@ -120,17 +123,23 @@ p {
   border-color: black;
 }
 
-iframe{
-  margin-top: 1em;
+.section {
+  box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1); 
+	border-radius: 12px 12px 12px 12px;
+  padding:2px 40px;
 }
 
-#footer {
-	margin-top: 1em;
-  background-color: lightgrey;
-  padding:1px;
-	height: 80px;
-	clear: both;
-  text-align: center;
+.multipdiv {
+  margin-top: .5em;
+}
+
+.specialp {
+  margin: 0;
+  padding: 0;
+}
+
+iframe{
+  margin-top: 1em;
 }
 
 @media screen and (min-width: 960px) {
